fix spacing of paragraphs in forums

--- a/discourse/common/common.scss
+++ b/discourse/common/common.scss
@@ -333,6 +333,9 @@ li {
   width: 20px;
   height: 20px;
 }
+.cooked p {
+  margin: 1em 0;
+}
 a:visited {
   color: #2d76cc;
 }
