--- a/less/discourse/common.less
+++ b/less/discourse/common.less
@@ -37,6 +37,10 @@ li {
   }
 }
 
+.cooked p {
+  margin: 1em 0;
+}
+
 a:visited {
   color: @blue-secondary;
 }
